/* Copyright 2020 The Fedlearner Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package proto;

option go_package = "github.com/bytedance/fedlearner/deploy/kubernetes_operator/proto;proto";

service PairingService {
    rpc Pair (PairRequest) returns (Status);
}

message Status {
    int32 code = 1;
    string error_message = 2;
}

message PairRequest {
    string app_id = 1;
    repeated Pair pairs = 2;
    CtrlFlag ctrl_flag = 3;
}

enum CtrlFlag {
    CREATE = 0;
    SHUTDOWN = 1;
    FINISH = 2;
}

message Pair {
    string role = 1;
    repeated string leader_ids = 2;
    repeated string follower_ids = 3;
}
